--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "enzyme-adapter-react-16": "^1.7.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^25.0.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
     "regenerator-runtime": "^0.13.1",
     "typescript": "^3.4.1",
     "webpack": "^4.23.1",
@@ -61,7 +61,7 @@
     "webpack-merge": "^4.1.4"
   },
   "peerDependencies": {
-    "react": "^16.8.0"
+    "react": ">=16.8.0"
   },
   "files": [
     "dist",
